# django-crm

./: .dockerignore  .env.db.example  .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_ENDPOINTS_QUICK_REFERENCE.md  Django-CRM API (api).yaml  Dockerfile  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  RESTART_SERVER_INSTRUCTIONS.md  crm_db  docker-compose.yml  manage.py  mkdocs.yml  onlinepbx-api.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  start_dev.sh  tailwind.config.js  tmp_rovodev_Jira_Tasks_TailAdmin.md  tmp_rovodev_PR_FE_TailAdmin_Integration.md
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml
.rovodev/: crm.md  prompts.yml
analytics/: BUILTIN_DASHBOARD_GUIDE.md  DASHBOARD_SETUP_GUIDE.md  DJANGO_DASH_INTEGRATION.md  INSTALLATION_INSTRUCTIONS.md  README.md  admin.py  apps.py  models.py  urls.py  views.py
analytics/dash_plugins/: __init__.py  crm_analytics_plugins.py  plugin_registry.py
analytics/management/: __init__.py
analytics/migrations/: 0001_initial.py  0002_initial.py
analytics/site/: anlmodeladmin.py  closingreasonstatadmin.py  conversionadmin.py  dealstatadmin.py  incomestatadmin.py  leadsourcestatadmin.py  outputstatadmin.py  requeststatadmin.py  salesfunnelsadmin.py
analytics/utils/: helpers.py  monthly_snapshot_saving.py
api/: README_VALIDATION.md  exception_handlers.py  permissions.py  serializers.py  urls.py  validators.py  views.py
chat/: admin.py  apps.py  models.py
chat/forms/: chatmessageform.py
chat/migrations/: 0001_initial.py
chat/site/: chatmessageadmin.py
chat/templates/: chat_buttons.html
common/: admin.py  apps.py  models.py  settings.py  urls.py
common/context_processors/: __init__.py  incoming_call.py
common/fixtures/: department.json  groups.json  publicemaildomain.json  sites.json
common/forms/: reminderform.py  userprofileform.py
common/migrations/: 0001_initial.py  0002_initial.py  0003_alter_userprofile_pbx_number.py  0004_alter_reminder_subject.py  0005_userprofile_avatar.py  0005_userprofile_jssip_fields.py
common/signals/: handlers.py
common/site/: basemodeladmin.py  crmsite.py  help_url_data.py  reminderadmin.py  userprofileadmin.py
common/templatetags/: crm_list.py  util.py
common/utils/: admfilters.py  admin_redirect_middleware.py  chat_link.py  copy_files.py  email_to_participants.py  for_translation.py  get_file_links.py  get_signature_preview.py  gettext_messages.py  help_to_admin.py  helpers.py  hide_main_tasks.py  notif_email_sender.py  notify_user.py  parse_full_name.py  remind_me.py  reminders_sender.py  resize_image.py  secure_url.py  usermiddleware.py
common/views/: copy_department.py  debugs.py  export_objects.py  favicon.py  frontend.py  reload_field.py  select_email_account.py  select_emails_import.py  toggle_default_sorting.py  user_transfer.py
contrib/: env-sample
crm/: README.md  admin.py  apps.py  settings.py  urls.py
crm/backends/: bank_gov_ua_backend.py  basebackend.py  cbr_xml_daily_ru_backend.py
crm/fixtures/: client_type.json  closing_reason.json  country.json  currency.json  deal_stage.json  industry.json  lead_source.json  leadsource_sla_demo.json
crm/forms/: add_files_form.py  admin_forms.py  contact_form.py  iso_currency_codes.json
crm/migrations/: 0001_initial.py  0002_initial.py  0003_company_disqualified_company_massmail_and_more.py  0004_alter_company_massmail_alter_contact_massmail_and_more.py  0005_alter_company_owner_alter_contact_owner_and_more.py  0006_currency_auto_update.py  0007_remove_contact_skype_remove_lead_skype.py  0008_company_district_company_region_contact_district_and_more.py  0008_company_state_contact_state_lead_state.py  0009_request_case.py  0010_company_logo.py  0010_leadsource_sla_hours.py  0011_calllog.py  0011_contact_avatar_lead_avatar.py
crm/models/: README.md  __init__.py  _to_translate.txt  base_contact.py  company.py  contact.py  country.py  crmemail.py  deal.py  lead.py  others.py  output.py  payment.py  product.py  request.py  tag.py
crm/site/: cityadmin.py  companyadmin.py  contactadmin.py  crmadminsite.py  crmemailadmin.py  crmmodeladmin.py  crmstackedinline.py  currencyadmin.py  dealadmin.py  leadadmin.py  outputinline.py  (+6 more)
docker/: docker-compose.yml  how_to_use.md  init.sql  settings.py  start_dev.sh  test_env.sh
docs/: README.md  crm_app_features-spanish.md  crm_app_features.md  crm_app_features.md-spanish.md  crm_system_overview-spanish.md  crm_system_overview.md  django-crm_analytics_app_overview-spanish.md  django-crm_analytics_app_overview.md  django-crm_memo_features-spanish.md  django-crm_memo_features.md  django-crm_task_features-spanish.md  django-crm_task_features.md  django-crm_user_guide-spanish.md  django-crm_user_guide.md  installation_and_configuration_guide-spanish.md  installation_and_configuration_guide.md  pull_request_template.md
free-angular-tailwind-dashboard-main/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/: BITRIX24-FEATURES.md  FINAL_UX_SUMMARY.md  LEADS_README.md  MODERN_LEADS_UX_GUIDE.md  README.md  enhanced-leads-demo.html  index.html  test-api.html  test_leads_integration.html
frontend-htmx/: index.html
help/: admin.py  apps.py  models.py
integrations/: admin.py  apps.py  models.py  sms.py  tasks.py  urls.py  utils.py  views.py  views_sms.py
massmail/: README.md  admin.py  admin_actions.py  apps.py  settings.py  urls.py
quality/: admin.py  apps.py
scripts/: tmp_rovodev_get_content_types.py  tmp_rovodev_seed_live_events.py  tmp_rovodev_seed_voip.py
settings/: admin.py  apps.py  models.py
tasks/: README.md  admin.py  apps.py  forms.py  settings.py  urls.py
templates/: crm_colors.html  crm_help_link.html  incoming_call_loader.html  language_chooser.html  reload_field_js.html
tests/: base_test_classes.py  main_menu_data.py  test_base.py
voip/: admin.py  ami.py  api_urls.py  apps.py  models.py  settings.py  urls.py  utils.py
webcrm/: celery.py  datetime_settings.py  settings.py  urls.py  wsgi.py
(+711 files in other folders)
