[metadata]
name = django-crm-admin
version = 0.93
description = The CRM with Tasks management, Email marketing and many more. This Django CRM software app is built for individual use by businesses of any size or freelancers and is designed to provide easy customization and quick development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DjangoCRM/django-crm
author = Vadym Kharchenko
author_email = VadKhar@outlook.com
license = AGPLv3+
license_file = LICENSE
keywords = CRM
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Customer Service
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Source = https://github.com/DjangoCRM/django-crm
    Tracker = https://github.com/DjangoCRM/django-crm/issues

[options]
include_package_data = true
packages = find_namespace:
py_modules = 
    manage
python_requires = >=3.10
install_requires =
    aiohttp==3.10.10
    aiosignal==1.3.1
    asgiref==3.8.1
    attrs==24.2.0
    certifi==2024.8.30
    charset-normalizer==3.4.0
    Django==5.1.2
    et-xmlfile==2.0.0
    frozenlist==1.5.0
    geoip2==4.8.0
    idna==3.10
    maxminddb==2.6.2
    multidict==6.1.0
    mysqlclient==2.2.5
    numpy==2.1.2
    openpyxl==3.1.5
    pandas==2.2.3
    polib==1.2.0
    python-dateutil==2.9.0.post0
    pytz==2024.2
    requests==2.32.3
    setuptools==75.2.0
    six==1.16.0
    sqlparse==0.5.1
    tendo==0.3.0
    tzdata==2024.2
    urllib3==2.2.3
    XlsxWriter==3.2.0
    yarl==1.17.0

zip_safe = False
